k8s/overlays/demo/postgres-endpoints-patch.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: green-house-postgres-host
  namespace: green-house
subsets:
  - addresses:
      - ip: 192.168.0.16
    ports:
      - name: postgres
        port: 5432
